--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.10.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.17"
